# omitl

./: .gitignore  Cargo.toml  Justfile  README.md  omitl  omitl.cmd
.github/workflows/: release.yml
contracts/: inventory-api.json  users-api.json
examples/: api_contract.json  brand.json
src/: cli.rs  lib.rs  main.rs
src/config/: brand.rs  defaults.rs  mod.rs
src/render/: context.rs  docx.rs  mod.rs  pdf.rs
src/schema/: contract.rs  mod.rs  openapi.rs  validate.rs
src/utils/: base64.rs
templates/: contract.typ.tera
